--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -44,7 +44,7 @@
     font-size: var(--pc-main-header);
     text-align:  right;
     width:30%;
-    top:40%;
+    top:48%;
     left:1.5%;
     rotate:-5.5deg;
     // font-family: "Rubik", sans-serif;
