--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -360,7 +360,7 @@
       font-size: var(--ipad-pro-main-header);
       text-align:  right;
       width:30%;
-      top:40%;
+      top:48%;
       left:1.5%;
       rotate:-5.5deg;
       // font-family: "Rubik", sans-serif;
@@ -394,6 +394,7 @@
       font-weight: 500;
       margin-bottom: 4rem;
       letter-spacing: 0.1rem;
+
     }
     
   
@@ -679,6 +680,8 @@
     animation:appear linear;
     animation-timeline:view();
     animation-range:entry 0% cover 40%;
+
+    width:80vw;
     
     .issue-section-intro-header{
       color: var(--secondary-brown);
@@ -688,6 +691,7 @@
       font-weight: 500;
       margin-bottom: 4rem;
       letter-spacing: 0.1rem;
+
     }
     
   
@@ -1008,7 +1012,7 @@
             font-size: var(--mobile-main-header);
             text-align:  right;
             width:45%;
-            top:62%;
+            top:68%;
             left:1.2%;
             rotate:-5.5deg;
             // font-family: "Rubik", sans-serif;
@@ -1033,6 +1037,9 @@
           animation:appear linear;
           animation-timeline:view();
           animation-range:entry 0% cover 40%;
+
+          width:92vw;
+
           
           .issue-section-intro-header{
             color: var(--secondary-brown);
@@ -1051,7 +1058,7 @@
             
             
             
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
             justify-content: center;
             align-items: center;
             
@@ -1108,7 +1115,7 @@
           
           
           width:100vw;
-          height:100%;
+          height:100vh;
           margin-top: -5rem;
           // padding: 1rem;
           
